[gd_scene load_steps=26 format=3 uid="uid://j4ioo5qbidik"]

[ext_resource type="Script" uid="uid://dud7322dt112l" path="res://world.gd" id="1_036b0"]
[ext_resource type="Texture2D" uid="uid://c60h7aap3pgnt" path="res://assets/Light/texture_08.png" id="2_fj7yv"]
[ext_resource type="Texture2D" uid="uid://hy5dnopmobtg" path="res://assets/Red/texture_01.png" id="3_tlwt5"]
[ext_resource type="PackedScene" uid="uid://bqnih1nfbxs6f" path="res://player.tscn" id="5_036b0"]
[ext_resource type="Shader" uid="uid://2dwodq7hb5f6" path="res://test.gdshader" id="5_dwbse"]
[ext_resource type="Shader" uid="uid://b1guy44by4o8j" path="res://portal.gdshader" id="5_ioo17"]
[ext_resource type="Texture2D" uid="uid://d2m8qf54p78pp" path="res://assets/Orange/texture_03.png" id="6_gbfbk"]
[ext_resource type="Texture2D" uid="uid://dgfc87vfilfo8" path="res://assets/Purple/texture_03.png" id="7_ioo17"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_gbfbk"]
ground_bottom_color = Color(0.565144, 0.573505, 0.590232, 1)

[sub_resource type="Sky" id="Sky_tlwt5"]
sky_material = SubResource("ProceduralSkyMaterial_gbfbk")

[sub_resource type="Environment" id="Environment_aqk2v"]
background_mode = 2
sky = SubResource("Sky_tlwt5")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tlwt5"]
albedo_color = Color(0.637843, 0.637843, 0.637843, 1)
albedo_texture = ExtResource("2_fj7yv")
uv1_triplanar = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pkg7o"]
render_priority = 0
shader = ExtResource("5_dwbse")

[sub_resource type="PlaneMesh" id="PlaneMesh_pkg7o"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_pkg7o")
size = Vector2(8, 4.5)
orientation = 0

[sub_resource type="ViewportTexture" id="ViewportTexture_ioo17"]
viewport_path = NodePath("SubVOne")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wse8f"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("5_ioo17")
shader_parameter/portal_texture = SubResource("ViewportTexture_ioo17")

[sub_resource type="PlaneMesh" id="PlaneMesh_tlwt5"]
resource_local_to_scene = true
lightmap_size_hint = Vector2i(42, 24)
material = SubResource("ShaderMaterial_wse8f")
size = Vector2(8, 4.5)
orientation = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wse8f"]
albedo_texture = ExtResource("6_gbfbk")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_ic0uy"]
material = SubResource("StandardMaterial3D_wse8f")
size = Vector3(1, 1, 8.5)

[sub_resource type="ViewportTexture" id="ViewportTexture_wse8f"]
viewport_path = NodePath("SubVTwo")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ic0uy"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("5_ioo17")
shader_parameter/portal_texture = SubResource("ViewportTexture_wse8f")

[sub_resource type="PlaneMesh" id="PlaneMesh_gbfbk"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_ic0uy")
size = Vector2(8, 4.5)
orientation = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k3n1d"]
albedo_texture = ExtResource("7_ioo17")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_2o6r5"]
material = SubResource("StandardMaterial3D_k3n1d")
size = Vector3(1, 1, 8.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aqk2v"]
albedo_texture = ExtResource("3_tlwt5")

[node name="World" type="Node3D"]
script = ExtResource("1_036b0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_aqk2v")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
material_override = SubResource("StandardMaterial3D_tlwt5")
use_collision = true
size = Vector3(50, 1, 50)

[node name="Test" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.908909, 0, 0.416996, 0, 1, 0, -0.416996, 0, -0.908909, 9.85033, 3, 4.80272)
mesh = SubResource("PlaneMesh_pkg7o")
skeleton = NodePath("../PortalOne")

[node name="SubVTwo" type="SubViewport" parent="."]
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="CamTwo" type="Camera3D" parent="SubVTwo"]
unique_name_in_owner = true
transform = Transform3D(0.428336, 0, -0.90362, 0, 1, 0, 0.90362, 0, 0.428336, -13.9293, 3.05521, 9.71927)
cull_mask = 1048573

[node name="SubVOne" type="SubViewport" parent="."]
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="CamOne" type="Camera3D" parent="SubVOne"]
unique_name_in_owner = true
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -10.7627, 3.05521, -16.4486)
cull_mask = 1048571

[node name="PortalOne" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.886568, 0, -0.4626, 0, 1, 0, 0.4626, 0, -0.886568, -8.31992, 3.11458, 7.17793)
layers = 2
mesh = SubResource("PlaneMesh_tlwt5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PortalOne"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, -2.7, 0)
mesh = SubResource("BoxMesh_ic0uy")

[node name="PortalTwo" type="MeshInstance3D" parent="."]
transform = Transform3D(0.674586, 0, -0.738197, 0, 1, 0, 0.738197, 0, 0.674586, -6.40827, 3, -11.2853)
layers = 4
mesh = SubResource("PlaneMesh_gbfbk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PortalTwo"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, -2.7, 0)
mesh = SubResource("BoxMesh_2o6r5")

[node name="Player" parent="." instance=ExtResource("5_036b0")]
transform = Transform3D(0.268432, 0, 0.963299, 0, 1, 0, -0.963299, 0, 0.268432, -0.0215783, 3.05383, -0.0147486)

[node name="Boxes" type="Node3D" parent="."]

[node name="CSGBox3D2" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1, 0)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D3" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.29996, 1, -9.78836)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D4" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.0983, 1, -9.19764)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D5" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.41624, 1, -3.69921)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D6" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.00102, 1, 7.39856)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D7" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.30485, 1, 7.5012)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D8" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.3296, 1, -7.70584)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D9" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.94388, 1, -17.9431)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D10" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.1107, 1, 4.99121)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D11" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.1222, 2, 16.9235)
size = Vector3(1, 3, 1)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D12" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.17636, 1, 18.3807)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D13" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.7825, 1, 16.1281)
size = Vector3(1, 1, 2.43799)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D14" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.7929, 1, 4.83341)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D15" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5644, 1, -15.9818)
material = SubResource("StandardMaterial3D_aqk2v")

[node name="CSGBox3D16" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.10944, 1, -17.6651)
material = SubResource("StandardMaterial3D_aqk2v")
